# lossy-wall

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  LEARNING.md  README.md  ROADMAP.md  bootstrap.py  client.py  fake.py  grader.py  m0.py  m1.py  m2.py  m3.py  m4.py  m5.py  notes.py  ping.py  problems.py  problems_gen.py  pyproject.toml  runner.py  stats.py  test_antirig.py  test_bootstrap.py  test_grader.py  test_logic.py  test_m0.py  test_m1.py  test_m2.py  test_m3.py  test_m4.py  test_m5.py  test_notes.py  test_problems.py  test_problems_gen.py  test_runner.py  test_stats.py
docs/: KICKOFF.md  M0-BRIEF.md  M1-BRIEF.md  M2-BRIEF.md  M3-BRIEF.md  M4-BRIEF.md  M5-BRIEF.md
docs/paper/: lossy-wall-paper.md  lossy-wall-presenter-brief.md
docs/session-logs/: 2026-07-06-lw-kickoff-scaffold-published.md
evidence/m2/: m2-judge-final.txt
evidence/m3/: bootstrap-appendix.txt  fix_meta-llama_llama-3.1-8b-instruct_arith.jsonl  fixture-parse-answer-inputs.json  fixture-parse-answer-script.py.txt  fixture-parse-answer.txt  m3-agreement-judge.txt  m3-checkpoint-recount-seed1.txt  m3-checkpoint-spotcheck-seed1.txt  m3-comparison-table.md  m3-final-recount.txt  oracle-probe.txt  oracle-run-seed1-console.txt  oracle-run-seeds3-console.txt  paper-extraction.md  reconfirm-dryrun-probe.txt  reconfirm-reproduce_tables.txt  their-problems-arith.json  their-problems-dump-script.py.txt
evidence/m4/: bank-deepseek.jsonl  bank-qwen72b.jsonl  grid-deepseek.jsonl  grid-qwen72b.jsonl  judge.txt  paper-extraction-logic.md  pilot-deepseek.jsonl  pilot-llama-stale-preprobe.jsonl  (+2 more)
(+383 files in other folders)
