[project]
name = "lossy-wall"
version = "0.1.0"
description = "Hobby-scale reproduction of Brittle Memory (arXiv 2606.25449): at a matched budget, a lossy note that drops its recomputable source makes a wrong conclusion uncorrectable — worse than an empty memory."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
]

[dependency-groups]
# pytest is for the validator suite only (kickoff tech stack); the author's
# reclaim-eval package is NEVER a dependency here — cross-check oracle only (D1).
dev = ["pytest>=8"]

[tool.uv]
# This is an application, not a distributable package — uv manages the venv
# and (if needed) a project Python automatically. Run things with `uv run ...`.
package = false
